replaced initial code with Chrish's alpha project